--- a/jupyter/OpenVisus-Tutorial.ipynb
+++ b/jupyter/OpenVisus-Tutorial.ipynb
@@ -6168,7 +6168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -6177,14 +6177,14 @@
        "'0 131072 0 131072'"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# loading a large 2D microscopy dataset showing the retina of a rabbit\n",
-    "dataset=LoadDataset(\"http://atlantis.sci.utah.edu/mod_visus?dataset=rabbit\")\n",
+    "dataset=ov.LoadDataset(\"http://atlantis.sci.utah.edu/mod_visus?dataset=rabbit\")\n",
     "# how big is the dataset ?\n",
     "# the logic box contains the extent of the dataset on the different axis\n",
     "dataset.getLogicBox().toString()"
