add link, notes

--- a/jupyter/OpenVisus-Tutorial.ipynb
+++ b/jupyter/OpenVisus-Tutorial.ipynb
@@ -6599,7 +6599,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run client OpenVisus Viewer"
+    "### Run client OpenVisus Viewer \n",
+    "\n",
+    "#### Note: the following does not work in a remote environment (e.g.,  Binder or JupyterHub), you can try the following code downloading this jupyter notebook and running it locally (after installing the dependencies OpenVisus and ITKwidgets, see beginning of this page)"
    ]
   },
   {
