Update Matplotlib and iPyWidgets - canvas.ipynb

--- a/jupyter/Matplotlib and iPyWidgets - canvas.ipynb
+++ b/jupyter/Matplotlib and iPyWidgets - canvas.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# this entry is necessary when using matplotlib in a jupyter notebook\n",
-    "%matplotlib notebook \n",
+    "%matplotlib widget \n",
     "\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np"
