Update Bokeh and Panda examples.ipynb

--- a/jupyter/Bokeh and Panda examples.ipynb
+++ b/jupyter/Bokeh and Panda examples.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bokeh and Panda examples"
+    "# Bokeh and Pandas examples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this jupyter notebook we will use the following libraries: bokeh, panda.\n",
+    "In this jupyter notebook we will use the following libraries: bokeh, pandas.\n",
     "\n",
-    "You can install those via *conda* with: `conda install bokeh panda`"
+    "You can install those via *conda* with: `conda install bokeh pandas`"
    ]
   },
   {
