--- a/jupyter/OpenVisus-Template.ipynb
+++ b/jupyter/OpenVisus-Template.ipynb
@@ -34,10 +34,6 @@
     "\n",
     "import os,sys\n",
     "\n",
-    "# Here are commands to install a package (OpenVisus) directly from a jupyter notebook\n",
-    "# after you install those once you can comment those comment\n",
-    "# !{sys.executable} -m pip install OpenVisus\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from ipywidgets import *\n",
@@ -54,48 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to read data from a remote dataset\n",
-    "# optional parameters: timestep, field (variable in the dataset), logic_box (bounding box of the query), resolution\n",
-    "\n",
-    "# Note: the resolution value could sometime fetch a dataset with the wrong aspect ratio, \n",
-    "# this because in the IDX format we double the size at each resolution on only one of the axis at a time\n",
-    "\n",
-    "def readData(dataset,\n",
-    "    time=None,\n",
-    "    field=None,\n",
-    "    logic_box=ov.BoxNi(),\n",
-    "    resolution=None):\n",
-    "    \n",
-    "    # setting default values if not provided\n",
-    "    if(time==None):\n",
-    "        time=dataset.getDefaultTime()\n",
-    "    if(field==None):\n",
-    "        field=dataset.getDefaultField()\n",
-    "    if(logic_box==ov.BoxNi()):\n",
-    "        logic_box=dataset.getLogicBox()\n",
-    "    if(resolution==None):\n",
-    "        resolution=dataset.getMaxResolution()\n",
-    "    \n",
-    "    # create an access mode (default \"network\") to access the data\n",
-    "    access=dataset.createAccess()\n",
-    "    # define a box query to fetch data from a certain dataset, field and timestep\n",
-    "    query=ov.BoxQuery(dataset, field, time,ord('r'))\n",
-    "    # set the bounding box for our query\n",
-    "    query.logic_box=logic_box\n",
-    "    # set the resolution \n",
-    "    query.end_resolutions.push_back(resolution)\n",
-    "    # prepare and execute the query\n",
-    "    dataset.beginQuery(query)\n",
-    "    dataset.executeQuery(access,query)\n",
-    "\n",
-    "    # transform the result of the query to a numpy array\n",
-    "    data=ov.Array.toNumPy(query.buffer,bSqueeze=True,bShareMem=False)\n",
-    "    \n",
-    "    return data\n",
-    "\n",
     "# function to plot the image data with matplotlib\n",
     "# optional parameters: colormap, existing plot to reuse (for more interactivity)\n",
     "def showData(data, cmap=None, plot=None):\n",
+    "    if len(data.shape)==3 and data.shape[0]==1: data=data[0,:,:]\n",
+    "    if len(data.shape)==3 and data.shape[1]==1: data=data[:,0,:]   \n",
+    "    if len(data.shape)==3 and data.shape[2]==1: data=data[:,:,0]\n",
     "    if(plot==None or cmap!=None):\n",
     "        fig=plt.figure(figsize = (7,5))\n",
     "        plot = plt.imshow(data, origin='lower', cmap=cmap)\n",
@@ -132,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
